Fix: wrong positioned labels

--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -113,5 +113,9 @@ $colors: (
 
 .bus-stop-marker
 {
-  display: none !important;
+  visibility: none !important;
+}
+.leaflet-label
+{
+  visibility: none !important;
 }
